# rust_crypto

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  build.sh  diesel_bybit.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
.cargo/: config.toml
migrations/2026-02-19-083712-0000_add_coin/: up.sql
migrations/2026-02-19-090131-0000_add_price_snapshot/: up.sql
migrations/2026-02-19-090253-0000_add_aggregated_prices/: up.sql
migrations/2026-02-19-090351-0000_add_metrics/: up.sql
migrations/2026-02-21-111216-0000_add_received_at_to_price_snapshots/: down.sql  up.sql
migrations_bybit/2026-02-21-111216-0000_add_received_at_to_price_snapshots/: down.sql  up.sql
src/: app.rs  db.rs  main.rs  middleware.rs  migrations.rs  pool.rs  schema.rs  tracing.rs
src/bybit/: db.rs  mod.rs  models.rs  schema.rs  service.rs
src/models/: coin.rs  mod.rs  price_snapshot.rs
src/routers/: mod.rs
src/routers/coins/: mod.rs  route_coin.rs
src/routers/pricing/: mod.rs  route_pricing.rs
src/services/: coingecko.rs  mod.rs  price_aggregator.rs
src/tests/: coin_test.rs  mod.rs
