[package]
name = "crypto-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-test = "18.7.0"
log = "0.4.24"
diesel = { version = "2.1", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
routes = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }